# ai_base

./: .gitignore  justfile  pyproject.toml
app/: main.py  settings.py
app/clients/: client.py
app/schemas/: schemas.py
