[project]
name = "ai-base"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "openai>=1.101.0",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.10",
    "tenacity>=9.1.2",
]

[dependency-groups]
commit = [
    "pre-commit>=4.3.0",
]
